Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3074

Regression fails on FreeBSD after TS-2736

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • None
    • 5.2.0
    • Core
    • None

    Description

      The commit that's causing the failure is 4a1d178189d0c86ac69d8e82580535416ae9a138.

      The error is

      [jenkins@freebsd10 /opt/ats]$ ./bin/traffic_server  -R 1
      [TrafficServer] using root directory '/opt/ats'
      FATAL: ink_sys_control.cc:59: failed assert `setrlimit(MAGIC_CAST(which), &rl) >= 0`
      ./bin/traffic_server - STACK TRACE:
      0x800bc751b <ink_fatal+0x7b> at /opt/ats/lib/libtsutil.so.7
      0x800bc6832 <_ink_assert+0x22> at /opt/ats/lib/libtsutil.so.7
      0x800bcdb3b <_Z18ink_max_out_rlimitibb+0xfb> at /opt/ats/lib/libtsutil.so.7
      0x4cca58 <main+0x638> at /opt/ats/bin/traffic_server
      0x4968cf <_start+0x14f> at /opt/ats/bin/traffic_server
      Abort trap (core dumped)
      

      Note that this only triggers when running as an unprivileged user (e.g. "jenkins" or "nobody").

      Attachments

        Activity

          People

            psudaemon Phil Sorber
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: