TS-3074: Fix FreeBSD regression